[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Attacks/Scripts/AttackBTN.gd" type="Script" id=1]
[ext_resource path="res://Sprites/UI/Icons/Attacks/Force Field.png" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/prototipo inventario/Lock Icon.png" type="Texture" id=3]

[node name="ATK" type="Button" groups=["ATKButton"]]
margin_right = 50.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 2 )
flat = true
expand_icon = true
script = ExtResource( 1 )

[node name="CoolDown" type="ProgressBar" parent="."]
visible = false
margin_right = 80.0
margin_bottom = 14.0
value = 100.0
percent_visible = false

[node name="Lock_Icon" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0.898039 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
icon = ExtResource( 3 )
flat = true
expand_icon = true

[connection signal="mouse_entered" from="." to="." method="_on_ATK_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ATK_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_ATK_pressed"]
